--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -80,7 +80,9 @@ admissionWebhooks:
 
 apiserver:
   enabled: true
-  port: 8000
+  service:
+    type: ClusterIP
+    port: 8000
   resources:
     limits:
       cpu: 500m
