--- a/docs/examples/workflow/definition.yaml
+++ b/docs/examples/workflow/definition.yaml
@@ -69,7 +69,7 @@ spec:
 apiVersion: core.oam.dev/v1beta1
 kind: ComponentDefinition
 metadata:
-  name: singletonServer
+  name: singleton-server
   annotations:
     definition.oam.dev/description: "singletonServer is Pod"
 spec:
