--- a/docs/examples/workflow/definition.yaml
+++ b/docs/examples/workflow/definition.yaml
@@ -22,9 +22,9 @@ spec:
         apply: op.#Apply & {
            value: {
               component.value.workload
-              metadata: name: parameter.name
-              if parameter.prefixIP!=_|_{
-                 spec: containers: [{env: [{name: "ServerIP",value: parameter.ServerIP}]}]
+              metadata: name: parameter.component
+              if parameter.serverIP!=_|_{
+                 spec: containers: [{env: [{name: "PrefixIP",value: parameter.serverIP}]}]
               }
            }
         }
@@ -55,12 +55,12 @@ spec:
 
         // apply workload to kubernetes cluster
         apply: op.#ApplyComponent & {
-           component: parameter.name
+           component: parameter.component
         }
 
         // wait until workload.status equal "Running"
         wait: op.#ConditionalWait & {
-           continue: apply.status.phase =="Running"
+           continue: apply.workload.status.phase =="Running"
         }
 
         // export podIP
